RESOLVED FIXED Bug 183579
Load may get committed before receiving policy for the resource response
https://bugs.webkit.org/show_bug.cgi?id=183579
Summary Load may get committed before receiving policy for the resource response
Chris Dumez
Reported 2018-03-12 13:50:09 PDT
Load may get committed before receiving policy for the resource response, when the resource is coming from our HTTP disk cache.
Attachments
Test and assertion without fix (3.59 KB, patch)
2018-03-12 14:10 PDT, Chris Dumez
no flags
Patch (10.22 KB, patch)
2018-03-12 14:44 PDT, Chris Dumez
no flags
Patch (11.61 KB, patch)
2018-03-12 15:22 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-03-12 13:50:27 PDT
Chris Dumez
Comment 2 2018-03-12 14:10:11 PDT
Created attachment 335638 [details] Test and assertion without fix
Chris Dumez
Comment 3 2018-03-12 14:44:36 PDT
Chris Dumez
Comment 4 2018-03-12 15:22:26 PDT
Chris Dumez
Comment 5 2018-03-12 16:06:57 PDT
Comment on attachment 335650 [details] Patch Clearing flags on attachment: 335650 Committed r229560: <https://trac.webkit.org/changeset/229560>
Chris Dumez
Comment 6 2018-03-12 16:06:58 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 7 2018-03-12 16:38:53 PDT
*** Bug 183470 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.